--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,10 @@
 /* Base */
 @import 'page/base';
 @import 'page/custom';
+@import 'page/about';
+@import 'page/movies';
+@import 'page/cinema';
+@import 'page/contact';
+
+/* Elements */
+@import 'elements/menu';
