--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,8 @@
 @import 'page/movies';
 @import 'page/cinema';
 @import 'page/contact';
+@import 'page/footer';
 
 /* Elements */
 @import 'elements/menu';
+@import 'elements/pop_up';
