--- a/scss/page/_movies.scss
+++ b/scss/page/_movies.scss
@@ -8,35 +8,46 @@
   flex-direction: column;
   padding: 35px 0 0;
 
-  .one_shot_movie {
-    position: relative;
-    width: 90%;
-    margin: 0 auto 35px;
+  @include breakpoint(medium) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
 
-    .name_movie {
-      color: $white;
-      padding-bottom: 15px;
-    }
+.one_shot_movie {
+  position: relative;
+  width: 90%;
+  margin: 0 auto 35px;
 
-    .shot_movie {
-      width: 100%;
+  @include breakpoint(medium) {
+    display: block;
+    width: 250px;
+    margin: 0 auto 45px;
+  }
 
-    }
+  .name_movie {
+    color: $white;
+    padding-bottom: 15px;
+  }
 
-    &:before {
-      content: 'czytaj więcej';
-      position: absolute;
-      width: 107px;
-      right: -9px;
-      bottom: 20px;
-      text-transform: uppercase;
-      text-align: center;
-      font-family: Avenir_Bold;
-      letter-spacing: .4px;
-      font-size: 10px;
-      color: $white;
-      background: $blodRed;
-      padding: 15px 10px;
-    }
+  .shot_movie {
+    width: 100%;
+
+  }
+
+  &:before {
+    content: 'czytaj więcej';
+    position: absolute;
+    width: 107px;
+    right: -9px;
+    bottom: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: Avenir_Bold;
+    letter-spacing: .4px;
+    font-size: 10px;
+    color: $white;
+    background: $blodRed;
+    padding: 15px 10px;
   }
 }
