--- a/scss/elements/_menu.scss
+++ b/scss/elements/_menu.scss
@@ -6,22 +6,23 @@
   justify-content: space-between;
   align-items: center;
 
+  @include breakpoint(medium) {
+    padding: 12px 25px;
+  }
+
   .pull_left {
     flex: 1 1 60%;
 
-    .logo {
-      display: inline-block;
-      max-width: 90px;
-      width: 90px;
-      vertical-align: middle;
-      margin-right: 5px;
-    }
 
     .header_date {
       position: relative;
       display: inline-block;
       font-size: 12px;
       color: $white;
+
+      @include breakpoint(medium) {
+        font-size: 14px;
+      }
 
       .bold {
         &:before {
@@ -34,6 +35,10 @@
           top: 0;
           bottom: 0;
           margin: auto;
+
+          @include breakpoint(medium) {
+            left: 33px
+          }
         }
       }
 
@@ -70,7 +75,6 @@
   overflow: hidden;
 
   ul {
-    color: $white;
     text-align: center;
     z-index: 101;
     padding: 25% 0;
@@ -78,10 +82,11 @@
     li {
       padding-bottom: 10px;
       font-size: 18px;
-    }
 
-    a {
-      color: $white;
+      @include breakpoint(medium) {
+        font-size: 20px;
+        padding-bottom: 15px;
+      }
     }
   }
 }
