--- a/scss/page/_about.scss
+++ b/scss/page/_about.scss
@@ -20,11 +20,8 @@
     padding-top: 100px;
   }
 
-  .about_fest {
+  .about_image_box {
     display: block;
-    width: 90%;
-    height: 100%;
-    margin: 0 auto;
     padding: 50px 0 20px;
 
     @include breakpoint(medium) {
@@ -42,6 +39,13 @@
       padding-right: 45px;
       margin: auto 0;
     }
+  }
+
+  .about_fest {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 0 20px;
   }
 
   .about_fest_text {
