--- a/scss/page/_custom.scss
+++ b/scss/page/_custom.scss
@@ -18,8 +18,7 @@
 
 #sync2 .item {
   // no active
-  padding: 10px 0px;
-  margin: 5px;
+  margin:0 25px 0 0;
   color: #FFF;
   cursor: pointer;
 
@@ -100,20 +99,11 @@
       content: '';
       position: absolute;
       display: block;
-      width: 95%;
-      height: 95%;
+      width: 100%;
+      height: 100%;
       background: $middleBlackOne;
       opacity: .5;
       z-index: 1;
-
-      @include breakpoint(large) {
-        width: 97%;
-      }
-
-      @include breakpoint(extralarge) {
-        width: 100%;
-        height: 98%;
-      }
     }
   }
 
