--- a/scss/page/_custom.scss
+++ b/scss/page/_custom.scss
@@ -95,13 +95,17 @@
 #sync2 {
   margin-top: -190px;
   .item {
-    &:before {
-      content: '';
+    position: relative;
+
+    .movie_more {
       position: absolute;
+      top:0;
+      left: 0;
       display: block;
-      width: calc(100% - 25px);
+      width: 100%;
       height: 100%;
       background: $middleBlackOne;
+      color: $middleBlackOne;
       opacity: .5;
       z-index: 1;
     }
@@ -125,12 +129,13 @@
     .item {
       position: relative;
 
-      &:before {
-        content: 'czytaj więcej';
+      .movie_more {
         position: absolute;
         width: 70px;
-        height: 10px;
+        height: 23px;
         opacity: 1;
+        top: auto;
+        left: auto;
         right: -7px;
         bottom: 15px;
         text-transform: uppercase;
@@ -145,7 +150,8 @@
         @include breakpoint(large) {
           width: 100px;
           font-size: 9px;
-          padding: 15px 5px;
+          padding: 10px 5px;
+          height: 30px;
 
         }
 
