--- a/scss/page/_custom.scss
+++ b/scss/page/_custom.scss
@@ -189,10 +189,15 @@
         padding-top: 100px;
       }
 
+      @include breakpoint(medium-lg) {
+        letter-spacing: 55px;
+        padding-top: 150px;
+      }
+
       @include breakpoint(large) {
         letter-spacing: 55px;
         font-size: 150px;
-        padding-top: 200px;
+        padding-top: 360px;
       }
 
       @include breakpoint(extralarge) {
@@ -204,9 +209,21 @@
 }
 
 .container-text {
+  position: relative;
   background-image:  url(../img/text_background/bodom.png);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-position: center;
   color:  #FFFFFF;
+}
+
+.glass {
+  &:before {
+    content: 'bodom';
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
