--- a/scss/page/_movies.scss
+++ b/scss/page/_movies.scss
@@ -32,6 +32,12 @@
   position: relative;
   width: 90%;
   margin: 0 auto 35px;
+  cursor: pointer;
+  transition: all .4s ease-in-out;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 
   @include breakpoint(medium) {
     display: block;
@@ -78,3 +84,55 @@
     padding: 15px 10px;
   }
 }
+
+
+.pop_up_video {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  text-align: center;
+  z-index: 9999999999999;
+  > div {
+    display: table;
+    width: 100%;
+    height: 100%;
+    > div {
+      display: table-cell;
+      width: 100%;
+      height: 100%;
+      vertical-align: middle;
+    }
+  }
+  .pop_up_video_bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: rgba(0,0,0,.9);
+    display: block;
+  }
+  .video_container {
+    margin: 0 auto;
+    width: 75%;
+    height: auto;
+    overflow: hidden;
+    position: relative;
+    .video {
+      width: 100%;
+      position: relative;
+      padding-bottom: 56.25%;
+      iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+      }
+    }
+  }
+}
+
