--- a/scss/page/_movies.scss
+++ b/scss/page/_movies.scss
@@ -37,6 +37,8 @@
 
   &:hover {
     transform: scale(1.1);
+    z-index: 1;
+    box-shadow: 0px 0px 24px 0px rgba(0,0,0,0.75);
   }
 
   @include breakpoint(medium) {
