--- a/scss/page/_about.scss
+++ b/scss/page/_about.scss
@@ -80,6 +80,11 @@
       display: block;
       width: 100%;
       padding-bottom: 5px;
+
+      &.inline {
+        display: inline-block;
+        width: auto;
+      }
     }
   }
 }
