--- a/scss/page/_custom.scss
+++ b/scss/page/_custom.scss
@@ -100,6 +100,22 @@
       display: none;
     }
 
+    .shot_movie {
+      max-height: 172px;
+
+      @include breakpoint(medium-lg) {
+        max-height: 251px;
+      }
+
+      @include breakpoint(large) {
+        max-height: 333px;
+      }
+
+      @include breakpoint(extralarge) {
+        max-height: 431px;
+      }
+    }
+
     .movie_more_black {
       position: absolute;
       top:0;
@@ -211,7 +227,7 @@
 
       @include breakpoint(extralarge) {
         font-size: 204px;
-        padding-top: 410px;
+        padding-top: 275px;
       }
     }
   }
