--- a/scss/page/_movies.scss
+++ b/scss/page/_movies.scss
@@ -56,6 +56,7 @@
   @include breakpoint(extralarge) {
     display: block;
     width: 315px;
+    height: 100%;
     margin: 0 15px 85px;
   }
 
@@ -70,10 +71,6 @@
 
     @include breakpoint(medium) {
       max-height: 339px;
-    }
-
-    @include breakpoint(large) {
-      max-height: 428px;
     }
   }
 
