--- a/scss/page/_cinema.scss
+++ b/scss/page/_cinema.scss
@@ -58,6 +58,7 @@
         width: 100px;
         height: 100%;
         vertical-align: middle;
+        padding-bottom: 15px;
       }
 
       @include breakpoint(large) {
