--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,9 @@
 @import 'variables/variables';
 @import 'variables/bootstrap';
 
+/* Elements */
+@import 'elements/carousel_movies';
+
 /* Base */
 @import 'page/base';
 @import 'page/custom';
