1. mniejsze fonty 2. slow slider 3. optim. pick 4 add fb

--- a/scss/elements/_menu.scss
+++ b/scss/elements/_menu.scss
@@ -230,3 +230,22 @@
     display: none;
   }
 }
+
+.svg-facebook {
+  width: 16px;
+  height: 16px;
+  fill: $white;
+  transition: fill .4s ease-in-out;
+
+  &:hover {
+    fill: $blodRed;
+  }
+}
+
+.click_menu {
+  transition: color .4s ease-in-out;
+
+  &:hover {
+    color: $blodRed;
+  }
+}
