--- a/scss/elements/_carousel_movies.scss
+++ b/scss/elements/_carousel_movies.scss
@@ -8,14 +8,14 @@
 
       .container-text {
         background-image: url(../img/text_background/blood.jpg);
-        font-size: 20px;
+        font-size: 18px;
 
         @include breakpoint(small) {
           font-size: 36px;
         }
 
         @include breakpoint(large) {
-          font-size: 90px;
+          font-size: 80px;
         }
 
         @include breakpoint(extralarge) {
@@ -74,7 +74,7 @@
 
       .container-text {
         background-image: url(../img/text_background/blood.jpg);
-        font-size: 20px;
+        font-size: 28px;
 
         @include breakpoint(small) {
           font-size: 40px;
@@ -102,10 +102,10 @@
 
       .container-text {
         background-image: url(../img/text_background/blood.jpg);
-        font-size: 16px;
+        font-size: 12px;
 
         @include breakpoint(small) {
-          font-size: 44px;
+          font-size: 28px;
         }
 
         @include breakpoint(large) {
@@ -127,8 +127,12 @@
       .container-text {
         background-image: url(../img/text_background/blood.jpg);
 
+        @include breakpoint(small) {
+          font-size: 56px;
+        }
+
         @include breakpoint(extralarge) {
-          font-size: 204px;
+          font-size: 224px;
         }
       }
     }
