--- a/scss/page/_movies.scss
+++ b/scss/page/_movies.scss
@@ -69,9 +69,9 @@
   .shot_movie {
     width: 100%;
 
-    @include breakpoint(medium) {
+    /*@include breakpoint(medium) {
       max-height: 342px;
-    }
+    }*/
   }
 
   &:before {
