--- a/scss/elements/_carousel_movies.scss
+++ b/scss/elements/_carousel_movies.scss
@@ -11,7 +11,7 @@
         font-size: 18px;
 
         @include breakpoint(small) {
-          font-size: 36px;
+          font-size: 32px;
         }
 
         @include breakpoint(large) {
@@ -19,7 +19,7 @@
         }
 
         @include breakpoint(extralarge) {
-          font-size: 114px;
+          font-size: 104px;
         }
       }
     }
@@ -61,7 +61,7 @@
         }
 
         @include breakpoint(extralarge) {
-          font-size: 204px;
+          font-size: 224px;
         }
       }
     }
@@ -89,7 +89,7 @@
         }
 
         @include breakpoint(extralarge) {
-          font-size: 174px;
+          font-size: 204px;
         }
       }
     }
@@ -108,8 +108,14 @@
           font-size: 28px;
         }
 
+        @include breakpoint(medium) {
+          font-size: 20px;
+          line-height: 40px;
+        }
+
         @include breakpoint(large) {
           font-size: 50px;
+          line-height: 105px;
         }
 
         @include breakpoint(extralarge) {
