--- a/scss/page/_cinema.scss
+++ b/scss/page/_cinema.scss
@@ -1,7 +1,8 @@
 .cinema {
   position: relative;
   background: $middleBlack;
-  padding-bottom: 25px;
+  padding-bottom: 65px;
+  overflow: hidden;
 }
 
 .cinema_city {
@@ -94,6 +95,73 @@
     @include breakpoint(large) {
       width: 90%;
       margin: auto;
+    }
+  }
+}
+
+.cinema_more {
+  max-height: 500px;
+
+  .top {
+    top: 0;
+  }
+
+  &.cinemas_show {
+    max-height: 100%;
+
+    &.cinema_gradient {
+      &:before {
+        content:'';
+        height: 50px;
+      }
+    }
+
+  }
+
+  &.cinema_gradient {
+    &::before {
+      content: '';
+      height: 250px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: linear-gradient(to bottom,  rgba(10,10,10,0) 0%,rgba(10,10,10,1) 70%);
+      transition: height .25s ease;
+    }
+  }
+}
+
+.show_more {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 15%;
+  width: 220px;
+  height: 50px;
+  margin: auto;
+  background: $brow;
+  color: $white;
+  padding: 15px 0 15px 57px;
+  z-index: 100;
+  transition: background .25s ease;
+
+  &:hover {
+    background: $blodRed;
+  }
+
+  &:before {
+    content:'Zobacz więcej';
+    height: 50px;
+  }
+
+  &.more_show {
+    bottom: 2%;
+
+    &:before {
+      content:'Zwiń';
+      height: 50px;
+      padding-left: 33px;
     }
   }
 }
