--- a/scss/page/_cinema.scss
+++ b/scss/page/_cinema.scss
@@ -149,6 +149,7 @@
   color: $white;
   padding: 15px 0 15px 57px;
   z-index: 100;
+  cursor: pointer;
   transition: background .25s ease;
 
   &:hover {
