--- a/scss/page/_cinema.scss
+++ b/scss/page/_cinema.scss
@@ -54,7 +54,7 @@
     .cinema_shot_img {
       display: none;
 
-      &.kika {
+      &.small {
         height: auto;
         max-width: 80px;
       }
